--- a/src/protocol/develop/M1 - Message.yaml
+++ b/src/protocol/develop/M1 - Message.yaml
@@ -1,6 +1,6 @@
-# 
+#
 # Message Action: the message action is a general purpose communication action. 'Twitter/sms' for Issuers/Investors/Users. The message txn can also be used for passing partially signed txns on-chain, establishing private communication channels including receipting, invoices, PO, and private offers/bids.  The messages are broken down by type for easy filtering in the a user’s wallet.  The Message Types are listed in the Message Types table.
-# 
+#
 
 code: M1
 
@@ -14,124 +14,80 @@ metadata:
 rules:
   fee:
   inputs:
-    - name: 
-      label: Msg Sender's Public Address
-      comments: 
+    - name:
+      label: "Msg Sender's Public Address"
+      comments:
 
   outputs:
-    - name: 
-      label: Msg Receiver's Public Address
+    - name:
+      label: "Msg Receiver's Public Address"
       comments: Dust limit rule minimum value output of 546
 
-    - name: 
-      label: Msg Sender's Public Address
+    - name:
+      label: "Msg Sender's Public Address"
       comments: Change
 
-    - name: 
+    - name:
       label: OP_RETURN (Message Action)
-      comments: Only one Tokenized action (excluding Message actions) per txn.  Action payload is always the last index of the txn outputs.  There is no limit to the number of M1 (message) actions per txn. 
+      comments: Only one Tokenized action (excluding Message actions) per txn.  Action payload is always the last index of the txn outputs.  There is no limit to the number of M1 (message) actions per txn.
 
-    - name: 
-      label: Miner's Fee
-      comments: ~550-1000 Bytes to account for return data and txn data.
+    - name:
+      label: "Miner's Fee"
+      comments: "~550-1000 Bytes to account for return data and txn data."
 
 fields:
-  - name: PUSHDATAINSTRUCTION
-    label: Push Data
-    description: "PUSHDATA 13 bytes for Protocol Identifer"
-    type: opcode
-    size: 1
-    example hex: 0d
-    example value: "13"
-    notes: "Cannot be changed by issuer, operator, or smart contract."
-
-  - name: ProtocolID
-    label: Protocol Identifier
-    description: "Tokenized ID Prefix.  tokenized.com"
-    type: string
-    size: 13
-    example hex: 746f6b656e697a65642e636f6d
-    example value: "tokenized.com"
-    notes: ""
-
-  - name: OP_PUSHDATA
-    label: Push Data
-    description: "PACKET LENGTH, PUSHDATA1 (76), PUSHDATA2 (77), or PUSHDATA4 (78) depending on total size of action payload."
-    type: opcode
-    size: 
-    example hex: aN
-    example value: ""
-    notes: "Cannot be changed by issuer, operator or smart contract."
-
-  - name: LenActionPayload
-    label: Length of Action Payload
-    description: "Length of the action message (0 - 65,535 bytes). 0 if pushdata length <76B, 1 byte if PUSHDATA1 is used, 2 bytes if PUSHDATA2 and 4 bytes if PUSHDATA4."
-    type: pushdata_length
-    size: 1
-    example hex: 1e
-    example value: "30"
-    notes: "Depends on Action Payload"
-
-  - name: Version
-    label: Version
-    description: "255 reserved for additional versions. Tokenized protocol versioning."
-    type: uint8
-    size: 1
-    example hex: 0
-    example value: "0"
-    notes: "Can be changed by Issuer or Operator at their discretion.  Smart Contract will reject if it hasn't been updated to interpret the version."
-
-  - name: ActionPrefix
-    label: Action Prefix
-    description: "Message: The message action is a general purpose communication action. 'Twitter/sms' for Issuers/Investors/Users. The message action can also be used for passing partially signed txns on-chain, establishing private communication channels including receipting, invoices, PO, and private offers/bids. The messages are broken down by type for easy filtering in the a user’s wallet. The Message Types are listed in the Message Types table."
-    type: string
-    size: 2
-    example hex: 4d31
-    example value: "M1"
-    notes: "Cannot be changed by issuer, operator or smart contract."
+  - name: Header
+    label: Header
+    description: "Common header data for all messages"
+    type: Header
+    notes: "Common header data for all messages."
 
   - name: TextEncoding
     label: Text Encoding
     description: " 0 = ASCII, 1 = UTF-8, 2 = UTF-16, 3 = Unicode.  Encoding applies to all 'text' data types. All 'string' types will always be encoded with ASCII.  Where string is selected, all fields will be ASCII."
     type: uint8
     size: 1
-    example hex: 0
-    example value: "0"
+    example_hex: 00
+    example_value: "0"
     notes: "Can be changed by Issuer or Operator at their discretion."
-
-  - name: Timestamp
-    label: Timestamp
-    description: "Timestamp of when the smart contract created the Reconciliation action."
-    type: time
-    size: 8
-    example hex: 0000016331e3c200
-    example value: "Sun May 06 2018 06:00:00 GMT+1000 (AEST)"
-    notes: ""
 
   - name: QtyReceivingAddresses
     label: Qty Receiving Addresses
     description: "0-255 Message Receiving Addresses"
     type: uint8
     size: 1
-    example hex: 01
-    example value: "1"
+    example_hex: 02
+    example_value: 2
     notes: ""
 
-  - name: AddressXIndex
-    label: Address X Index
+  - name: AddressIndexes
+    label: Address Indexes
     description: "Associates the message to a particular output by the index."
-    type: uint16
-    size: 1
-    example hex: 0000
-    example value: "0"
-    notes: ""
+    type: uint16[]
+    example_hex: 00010002
 
   - name: MessageType
     label: Message Type
     description: "Potential for up to 65,535 different message types"
     type: string
     size: 2
-    example hex: 3600
-    example value: "6"
+    example_hex: 3600
+    example_value: "6"
     notes: ""
 
+  - name: MessagePayload
+    label: Message Payload
+    description: "Length 0-65,535 bytes. Public or private (RSA public key, Diffie-Hellman).  Issuers/Contracts can send the signifying amount of satoshis to themselves for public announcements or private 'notes' if encrypted.  See Message Types for a full list of potential use cases."
+    type: nvarchar16
+    example_hex: 000c48656c6c6f20776f726c6421
+    example_value: "Hello world!"
+    notes: ""
+
+  - name: Timestamp
+    label: Timestamp
+    description: "Timestamp in nanoseconds of when the smart contract created the action."
+    type: timestamp
+    size: 8
+    example_hex: 1588f8cc6a16430d
+    example_value: 1551767413250187179
+    notes: "Cannot be changed by issuer, operator. Smart contract controls."
