--- a/src/protocol/develop/types/notable_role.yaml
+++ b/src/protocol/develop/types/notable_role.yaml
@@ -3,19 +3,19 @@ metadata:
 
 fields:
   - name: Type
-    label: Key Role Type
-    description: "Chairman, Director. Found in 'Roles' in Specification/Resources"
+    label: Notable Role Type
+    description: "Found in 'Roles' in Specification/Resources"
     type: string
     size: 1
-    example_hex: 43454f
-    example_value: "CEO"
-    notes: ""
+    example_hex: 35
+    example_value: "5"
+    notes: "5 - CEO"
 
   - name: Name
-    label: Key Role Name
+    label: Notable Role Name
     description: "Length 0-255 bytes. 0 is valid. Name (eg. John Alexander Smith)"
     type: nvarchar8
     size: 14
     example_hex: 0d4a616d65732042656c64696e67
-    example_value: "James Belding"
+    example_value: "Satoshi Nakamoto"
     notes: ""
