--- a/src/protocol/develop/G1 - Initiative.yaml
+++ b/src/protocol/develop/G1 - Initiative.yaml
@@ -14,30 +14,18 @@ metadata:
 rules:
   fee:
   inputs:
-    - name:
+    - name: User
       label: "Token Owner's Public Address"
       comments:
 
   outputs:
-    - name:
+    - name: Contract
       label: Contract Public Address
       comments: 
       
-    - name:
+    - name: Contract
       label: Contract Public Address
       comments: Fund the Result at Vote cut off
-
-    - name:
-      label: "Token Owner's Public Address"
-      comments: Change
-
-    - name:
-      label: OP_RETURN (Initiative Action)
-      comments: Only one Tokenized action (excluding Message actions) per txn.  Action payload is always the last index of the txn outputs.  There is no limit to the number of M1 (message) actions per txn.
-
-    - name:
-      label: "Miner's Fee"
-      comments: "~550-1000 Bytes to account for return data and txn data."
 
 fields:
   - name: Header
