--- a/src/protocol/develop/G3 - Vote.yaml
+++ b/src/protocol/develop/G3 - Vote.yaml
@@ -1,5 +1,5 @@
 #
-# Vote Action: A vote is created by the Contract in response to a valid Referendum (Issuer) or Initiative (User) Action.  Votes can be made by Token Owners.
+# Vote Action: A vote is created by the Contract in response to a valid Referendum (Issuer) or Initiative (User) Action.
 #
 
 code: G3
@@ -7,37 +7,25 @@ code: G3
 metadata:
   name: Vote
   label: Vote Action
-  description: "Vote Action -  A vote is created by the Contract in response to a valid Referendum (Issuer) or Initiative (User) Action.  Votes can be made by Token Owners.  "
+  description: "Vote Action -  A vote is created by the Contract in response to a valid Referendum (Issuer) or Initiative (User) Action."
   validation: AssetCreation
   rejection: Rejection
 
 rules:
   fee:
   inputs:
-    - name:
+    - name: Contract
       label: Contract Public Address
       comments:
 
   outputs:
-    - name:
+    - name: Contract
       label: Contract Public Address
       comments:
 
-    - name:
+    - name: Issuer
       label: Issuer's Public Address
       comments: Issuer gets the threshold fee.
-
-    - name:
-      label: Contract Fee Address
-      comments: Contract Operator's Fee
-
-    - name:
-      label: OP_RETURN (Vote Action)
-      comments: Only one Tokenized action (excluding Message actions) per txn.  Action payload is always the last index of the txn outputs.  There is no limit to the number of M1 (message) actions per txn.
-
-    - name:
-      label: "Miner's Fee"
-      comments: ~550-1000 Bytes to account for return data and txn data.
 
 fields:
   - name: Header
