--- a/src/protocol/develop/G4 - Ballot Cast.yaml
+++ b/src/protocol/develop/G4 - Ballot Cast.yaml
@@ -1,5 +1,5 @@
 #
-# Ballot Cast Action: Used to allow Token Owners to cast their ballot (vote) on proposals raised by the Issuer or other token holders. 1 Vote per token unless a vote multiplier is specified in the relevant Asset Definition action.
+# Ballot Cast Action: Used by Token Owners to cast their ballot (vote) on proposals raised by the Issuer (Referendum) or other token holders (Initiative). 1 Vote per token unless a vote multiplier is specified in the relevant Asset Definition action.
 #
 
 code: G4
@@ -7,33 +7,21 @@ code: G4
 metadata:
   name: BallotCast
   label: Ballot Cast Action
-  description: "Ballot Cast Action -  Used to allow Token Owners to cast their ballot (vote) on proposals raised by the Issuer or other token holders. 1 Vote per token unless a vote multiplier is specified in the relevant Asset Definition action."
+  description: "Ballot Cast Action -  Used by Token Owners to cast their ballot (vote) on proposals raised by the Issuer (Referendum) or other token holders (Initiative). 1 Vote per token unless a vote multiplier is specified in the relevant Asset Definition action."
   validation: AssetCreation
   rejection: Rejection
 
 rules:
   fee:
   inputs:
-    - name:
+    - name: User
       label: "Token Owner's Public Address"
       comments:
 
   outputs:
-    - name:
+    - name: Contract
       label: Contract Public Address
       comments: Dust limit rule minimum value output of 546
-
-    - name:
-      label: "Token Owner's Public Address"
-      comments: Change
-
-    - name:
-      label: OP_RETURN (Ballot Cast Action)
-      comments: Only one Tokenized action (excluding Message actions) per txn.  Action payload is always the last index of the txn outputs.  There is no limit to the number of M1 (message) actions per txn.
-
-    - name:
-      label: "Miner's Fee"
-      comments: "~550-1000 Bytes to account for return data and txn data."
 
 fields:
   - name: Header
