--- a/src/protocol/develop/G5 - Ballot Counted.yaml
+++ b/src/protocol/develop/G5 - Ballot Counted.yaml
@@ -14,22 +14,14 @@ metadata:
 rules:
   fee:
   inputs:
-    - name:
+    - name: Contract
       label: Contract Public Address
       comments:
 
   outputs:
-    - name:
+    - name: User
       label: "Token Owner's Public Address"
       comments: Dust limit rule minimum value output of 546
-
-    - name:
-      label: OP_RETURN (Ballot Cast Action)
-      comments: Only one Tokenized action (excluding Message actions) per txn.  Action payload is always the last index of the txn outputs.  There is no limit to the number of M1 (message) actions per txn.
-
-    - name:
-      label: "Miner's Fee"
-      comments: ~550-1000 Bytes to account for return data and txn data.
 
 fields:
   - name: Header
