--- a/src/protocol/develop/G6 - Result.yaml
+++ b/src/protocol/develop/G6 - Result.yaml
@@ -14,22 +14,14 @@ metadata:
 rules:
   fee:
   inputs:
-    - name:
+    - name: Contract
       label: Contract Public Address
       comments:
 
   outputs:
-    - name:
+    - name: Contract
       label: Contract Public Address
       comments: Dust limit rule minimum value output of 546
-
-    - name:
-      label: OP_RETURN (Result Action)
-      comments: Only one Tokenized action (excluding Message actions) per txn.  Action payload is always the last index of the txn outputs.  There is no limit to the number of M1 (message) actions per txn.
-
-    - name:
-      label: "Miner's Fee"
-      comments: ~550-1000 Bytes to account for return data and txn data.
 
 fields:
   - name: Header
@@ -67,7 +59,7 @@ fields:
 
   - name: Proposal
     label: Proposal
-    description: "1 for a Proposal, 0 for an initiative that is requesting changes to specific subfields for modification. If this field is true, the subfields should be empty."
+    description: "1 for a Proposal, 0 for an initiative that is requesting changes to specific subfields for modification. If this field is true, the subfields should be empty.  The smart contract cannot interpret the results of a vote when Proposal = 1.  All meaning is interpreted by the token owners and smart contract simply facilates the record keeping.  When Proposal = 0, the smart contract always assumes the first choice is a 'yes', or 'pass', if the threshold is met, and will process the proposed changes accordingly."
     type: bool
     size: 1
     example_hex: 00
@@ -102,9 +94,9 @@ fields:
     example_value: "1"
     notes: ""
 
-  - name: Option1Tally
-    label: Option 1 Tally
-    description: "Number of valid votes counted for Option 1"
+  - name: OptionXTally
+    label: Option X Tally
+    description: "Number of valid votes counted for Option X"
     type: uint64
     size: 8
     example_hex: 0000000000000bb8
