--- a/src/protocol/develop/T1 - Send.yaml
+++ b/src/protocol/develop/T1 - Send.yaml
@@ -14,42 +14,18 @@ metadata:
 rules:
   fee:
   inputs:
-    - name:
-      label: Token Sending Public Address X
-      comments:
-
-    - name:
+    - name: TokenSenderX
       label: Token Sending Public Address X
       comments:
 
   outputs:
-    - name:
+    - name: Contract
       label: Contract Public Address
       comments: Enough for the costs of the responding action + the Contract Fee
 
-    - name:
-      label: "Token Receiver's Public Address 1"
-      comments: Token Output Address 1 (Token Receiver).
-
-    - name:
-      label: "Token Receiver's Address X"
+    - name: TokenReceiverX
+      label: "Token Receiver's Public Address X"
       comments: Token Output Address X (Token Receiver).
-
-    - name:
-      label: "Token Receiver's Address X"
-      comments: Token Output Address X (Token Receiver).
-
-    - name:
-      label: "Token Sender's Public Address X"
-      comments: Change
-
-    - name:
-      label: OP_RETURN (Send Action)
-      comments: Only one Tokenized action (excluding Message actions) per txn.  Action payload is always the last index of the txn outputs.  There is no limit to the number of M1 (message) actions per txn.
-
-    - name:
-      label: "Miner's Fee"
-      comments: "~550-1000 Bytes to account for return data and txn data."
 
 fields:
   - name: Header
