--- a/src/protocol/develop/T2 - Exchange.yaml
+++ b/src/protocol/develop/T2 - Exchange.yaml
@@ -14,50 +14,26 @@ metadata:
 rules:
   fee:
   inputs:
-    - name:
+    - name: TokenSenderX
       label: Token Sending Address X
       comments:
 
-    - name:
-      label: Token Sending Address X
-      comments:
-
-    - name:
+    - name: BitcoinSenderX
       label: Bitcoin Sending address X
       comments:
 
-    - name:
-      label: Bitcoin Sending Address X
-      comments:
-
   outputs:
-    - name:
+    - name: Contract
       label: Contract Public Address
       comments: "The Token Receiver (buyer) pays the Contract the money to hold in 'momentary escrow' (including fees).  The Contract will transfer the money to the Token Sender in a Transfer Txn if the Exchange Txn is acceptable.  If the Txn is not acceptable then the SC will send the money back to the Token Receiver less miner's fees using a Rejection Action."
 
-    - name:
+    - name: BitcoinReceiverX
       label: Bitcoin Receiving Address X
       comments: Token Sender simply sends any amount back to himself.  No additional UTXO is created for typical Exchange txns.
 
-    - name:
-      label: Bitcoin Receiving Address X
-      comments: Change
-
-    - name:
+    - name: TokenReceiverX
       label: Token Receiving Address X
-      comments: Change
-
-    - name:
-      label: Token Receiving Address X
-      comments: Change
-
-    - name:
-      label: OP_RETURN (Exchange Action)
-      comments: Only one Tokenized action (excluding Message actions) per txn.  Action payload is always the last index of the txn outputs.  There is no limit to the number of M1 (message) actions per txn.
-
-    - name:
-      label: "Miner's Fee"
-      comments: "~550-1000 Bytes to account for return data and txn data."
+      comments:
 
 fields:
   - name: Header
