--- a/src/protocol/develop/T3 - Swap.yaml
+++ b/src/protocol/develop/T3 - Swap.yaml
@@ -1,5 +1,5 @@
 #
-# Swap Action: Two parties (or more) want to swap a token (Atomic Swap) directly for another token.  BSV is used in the txn other than for paying the necessary network/transaction fees.
+# Swap Action: Two parties (or more) want to swap a token (Atomic Swap) directly for another token.  At a minimum, Bitcoin is used in the txn for paying the necessary network/transaction fees.
 
 
 code: T3
@@ -7,65 +7,37 @@ code: T3
 metadata:
   name: Swap
   label: Swap Action
-  description: "Swap Action -  Two (or more) parties want to swap a token (Atomic Swap) directly for another token.  BSV is not used in the transaction other than for paying the necessary network/transaction fees."
+  description: "Swap Action -  Two parties (or more) want to swap a token (Atomic Swap) directly for another token.  At a minimum, Bitcoin is used in the txn for paying the necessary network/transaction fees."
   validation: AssetCreation
   rejection: Rejection
 
 rules:
   fee:
   inputs:
-    - name:
+    - name: Asset1SenderX
       label: Asset 1 Sending Address X
       comments:
 
-    - name:
-      label: Asset 1 Sending Address X
-      comments:
-
-    - name:
-      label: Asset 2 Sending Address X
-      comments:
-
-    - name:
+    - name: Asset2SenderX
       label: Asset 2 Sending Address X
       comments:
 
   outputs:
-    - name:
+    - name: Asset1Contract
       label: "Contract Public Address (Asset 1)"
       comments: Enough for the responding action.
 
-    - name:
+    - name: Asset2Contract
       label: "Contract Public Address (Asset 2)"
       comments: Enough for the responding action.
 
-    - name:
+    - name: Asset1ReceiverX
       label: Asset 1 Receiving Address X
-      comments: Change
+      comments: 
 
-    - name:
-      label: Asset 1 Receiving Address X
-      comments: Change
-
-    - name:
-      label: Asset 1 Receiving Address X
-      comments: Change
-
-    - name:
+    - name: Asset2ReceiverX
       label: Asset 2 Receiving Address X
       comments: Change
-
-    - name:
-      label: Asset 2 Receiving Address X
-      comments:
-
-    - name:
-      label: OP_RETURN (Swap Action)
-      comments: Only one Tokenized action (excluding Message (M1) actions) per txn.  Action payload is always the last index of the txn outputs.  There is no limit to the number of M1 (message) actions per txn.
-
-    - name:
-      label: "Miner's Fee"
-      comments: "~550-1000 Bytes to account for return data and txn data."
 
 fields:
   - name: Header
