--- a/src/assets/develop/SHC - Common Share.yaml
+++ b/src/assets/develop/SHC - Common Share.yaml
@@ -25,61 +25,19 @@ fields:
 
   - name: TradingRestriction
     label: Trading Restriction
-    type: country
-    size: 3
+    type: polity
+    size: 5
     example: AUS
     span: full
     displayOrder: 3
 
-  - name: DividendType
-    label: Dividend Type
-    type: dropdown
-    size: 1
-    example: C
-    displayOrder: 6
-    options:
-      C: Combination
-      V: Variable
-      F: Fixed
-
-  - name: DividendVar
-    label: Dividend (%)
-    type: float
-    size: 4
-    example: 0.02
-    default: 0
-
-  - name: DividendFixed
-    label: Dividend (Fixed)
-    type: float
-    size: 4
-    example: 10000
-    default: 0
-
-  - name: DistributionInterval
-    label: Distribution Interval
-    type: dropdown
-    size: 1
-    example: Q
-    displayOrder: 7
-    options:
-      Q: Quarterly
-      M: Monthly
-      W: Weekly
-      A: Annually
-      B: Biannually
-
-  - name: Guaranteed
-    label: Dividend Guaranteed
-    type: dropdown
-    size: 1
-    example: Y
-    displayOrder: 5
-    default: 'N'
-    emptyOption: false
-    options:
-      Y: 'Yes'
-      N: 'No'
+  - name: TransferLockout
+    label: TransferLockout
+    type: timestamp
+    size: 8
+    example: 11/4/2019 18:00:00
+    span: full
+    displayOrder: 3
 
   - name: Ticker
     label: Ticker
@@ -98,7 +56,7 @@ fields:
 
   - name: Description
     label: Description
-    type: string
+    type: nvarchar16
     size: 113
     example: APPLC - Apple corp - Common share issue class C
     span: full
