Update TIC - Admission Ticket.yaml

--- a/src/assets/develop/TIC - Admission Ticket.yaml
+++ b/src/assets/develop/TIC - Admission Ticket.yaml
@@ -17,7 +17,7 @@ metadata:
 fields:
   - name: Version
     label: Version
-    type: uint
+    type: uint8
     description: Payload Version
     size: 1
     example: 0
